Hide units numbers on mobile

--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -32,20 +32,20 @@
           las herramientas de la ciencia de datos en sus respectivas actividades.</p>
         <h3>Contenido</h3>
         <ul>
-            <li>Unidad 0: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono movil</a></li>
-            <li>Unidad 1: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/1_pandas.ipynb">Convertir mis datos en una tabla</a></li>
-            <li>Unidad 2: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/2_vectores.ipynb">Convertir todos los datos a numeros</a></li>
-            <li>Unidad 3: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/3_train_test.ipynb">Separar la tabla en dos: Entrenamiento y Prueba</a></li>
-            <li>Unidad 4: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
-            <li>Unidad 5: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb">Tipos de caja negra</a></li>
+            <li><span class="unit">Unidad 0: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono movil</a></li>
+            <li><span class="unit">Unidad 1: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/1_pandas.ipynb">Convertir mis datos en una tabla</a></li>
+            <li><span class="unit">Unidad 2: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/2_vectores.ipynb">Convertir todos los datos a numeros</a></li>
+            <li><span class="unit">Unidad 3: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/3_train_test.ipynb">Separar la tabla en dos: Entrenamiento y Prueba</a></li>
+            <li><span class="unit">Unidad 4: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
+            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb">Tipos de caja negra</a></li>
             <li>
-                Unidad 6: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a>
+                <span class="unit">Unidad 6: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a>
                 <ul>
                     <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6.1_ejercicio_diabetes_parte1.ipynb">Ejercicio de Clasificacion Parte 1</a></li>
                 </ul>
             </li>
             <li>
-                Unidad 7: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a>
+                <span class="unit">Unidad 7: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a>
                 <ul>
                     <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7.1_ejercicio_diabetes_parte2.ipynb">Ejercicio de Clasificacion Parte 2</a></li>
                 </ul>
