--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -32,32 +32,32 @@
 
         <h3>Contenido</h3>
         <ul>
-          <li>Unidad 0: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/0_intro.ipynb">Una calculadora potente</a> [ <a href="#" class="video-btn" data-video-id="LOPzWyyT23k">Video <i class="fa-solid fa-video"></i></a> ]</li>
-          <li>Unidad 1: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/1_variables.ipynb">Guardando resultados en la memoria</a> [ <a href="#" class="video-btn" data-video-id="ay8sMqC8yQI">Video <i class="fa-solid fa-video"></i></a> ]</li>
-          <li>Unidad 2: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/2_condiciones.ipynb">Comparar dos valores</a> [ <a href="#" class="video-btn" data-video-id="bvm6h14Lzz0">Video <i class="fa-solid fa-video"></i></a> ]</li>
-          <li>Unidad 3: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/3_if.ipynb">Si la condicion es verdadera haz esto</a> [ <a href="#" class="video-btn" data-video-id="WR8FAuJ0AKQ">Video <i class="fa-solid fa-video"></i></a> ]</li>
-          <li>Unidad 4: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/4_while.ipynb">Mientras la condicion es verdadera repite</a> [ <a href="#" class="video-btn" data-video-id="qJUpWwyhOFQ">Video <i class="fa-solid fa-video"></i></a> ]</li>
+          <li><span class="unit">Unidad 0: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/0_intro.ipynb">Una calculadora potente</a> [ <a href="#" class="video-btn" data-video-id="LOPzWyyT23k">Video <i class="fa-solid fa-video"></i></a> ]</li>
+          <li><span class="unit">Unidad 1: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/1_variables.ipynb">Guardando resultados en la memoria</a> [ <a href="#" class="video-btn" data-video-id="ay8sMqC8yQI">Video <i class="fa-solid fa-video"></i></a> ]</li>
+          <li><span class="unit">Unidad 2: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/2_condiciones.ipynb">Comparar dos valores</a> [ <a href="#" class="video-btn" data-video-id="bvm6h14Lzz0">Video <i class="fa-solid fa-video"></i></a> ]</li>
+          <li><span class="unit">Unidad 3: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/3_if.ipynb">Si la condicion es verdadera haz esto</a> [ <a href="#" class="video-btn" data-video-id="WR8FAuJ0AKQ">Video <i class="fa-solid fa-video"></i></a> ]</li>
+          <li><span class="unit">Unidad 4: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/4_while.ipynb">Mientras la condicion es verdadera repite</a> [ <a href="#" class="video-btn" data-video-id="qJUpWwyhOFQ">Video <i class="fa-solid fa-video"></i></a> ]</li>
           <li>Sientes que no entiendes? Haz una pausa y prueba con estos <a href="https://blockly.games/?lang=es">Juegos de Programacion</a></li>
-          <li>Unidad 5: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5_funciones_ya_definidas.ipynb">Funciones ya definidas</a></li>
-          <li>Unidad 6: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6_entrada_proceso_salida.ipynb">Entrada -> Proceso -> Salida</a></li>
-          <li>Unidad 6.1: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6.1_funciones.ipynb">Entrada -> Proceso -> Salida con Funciones</a>
+          <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5_funciones_ya_definidas.ipynb">Funciones ya definidas</a></li>
+          <li><span class="unit">Unidad 6: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6_entrada_proceso_salida.ipynb">Entrada -> Proceso -> Salida</a></li>
+          <li><span class="unit">Unidad 6.1: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6.1_funciones.ipynb">Entrada -> Proceso -> Salida con Funciones</a>
               <ul><li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6.2_funciones_ejercicios.ipynb">Ejercicios extra de funciones</a></li></ul>
           </li>
           
-          <li>Unidad 7: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/7_listas.ipynb">Muchas variables con un solo nombre</a></li>
-          <li>Unidad 8: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8_for.ipynb">Para cada elemento de una lista</a>
+          <li><span class="unit">Unidad 7: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/7_listas.ipynb">Muchas variables con un solo nombre</a></li>
+          <li><span class="unit">Unidad 8: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8_for.ipynb">Para cada elemento de una lista</a>
               <ul><li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8.1_for_y_while.ipynb">Todo lo que hago con for lo puedo hacer con while</a></li></ul>
           </li>
-          <li>Unidad 9: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/9_corchetes_listas_strings.ipynb">Partir listas y strings</a>
+          <li><span class="unit">Unidad 9: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/9_corchetes_listas_strings.ipynb">Partir listas y strings</a>
               <ul><li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/9.1_funciones_listas_strings.ipynb">Funciones incorporadas de listas y strings</a></li></ul>
           </li>
-          <li>Unidad 10: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A0_practica.ipynb">La practica te convertira en maestr@</a></li>
-          <li>Unidad 11: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A1_listas_de_listas.ipynb">Listas de listas</a></li>
-          <li>Unidad 12: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A2_tuplas.ipynb">Tuplas</a></li>
-          <li>Unidad 13: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A3_diccionarios.ipynb">Diccionarios</a></li>
-          <li>Unidad 14: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A4_sets.ipynb">Conjuntos</a></li>
-          <li>Unidad 15: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A5_clases.ipynb">Crear nuestro propio tipo de variable (Clases)</a></li>
-          <li>Unidad 16: 
+          <li><span class="unit">Unidad 10: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A0_practica.ipynb">La practica te convertira en maestr@</a></li>
+          <li><span class="unit">Unidad 11: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A1_listas_de_listas.ipynb">Listas de listas</a></li>
+          <li><span class="unit">Unidad 12: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A2_tuplas.ipynb">Tuplas</a></li>
+          <li><span class="unit">Unidad 13: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A3_diccionarios.ipynb">Diccionarios</a></li>
+          <li><span class="unit">Unidad 14: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A4_sets.ipynb">Conjuntos</a></li>
+          <li><span class="unit">Unidad 15: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A5_clases.ipynb">Crear nuestro propio tipo de variable (Clases)</a></li>
+          <li><span class="unit">Unidad 16: </span>
               <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A6_numeros_aleatorios.ipynb">Numeros Aleatorios</a>
               <ul><li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/A6.1_probabilidades_contraintuitivas.ipynb">Simulacion y Probabilidades Contraintuitivas (ejercicio avanzado opcional)</a></li></ul>
           </li>
