--- a/title-centered.html
+++ b/title-centered.html
@@ -26,8 +26,9 @@
 <body> 
     <div class="container"> 
         <h1> 
-            Unidad 6: <br/>
+            Unidad 6.1: <br/>
             Entrada > Proceso > Salida
+            <br>con Funciones
         </h1> 
     </div> 
 </body> 
