fixed colab links

--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -32,22 +32,22 @@
           las herramientas de la ciencia de datos en sus respectivas actividades.</p>
         <h3>Contenido</h3>
         <ul>
-            <li><span class="unit">Unidad 0: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono movil</a></li>
-            <li><span class="unit">Unidad 1: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/1_pandas.ipynb">Convertir mis datos en una tabla</a></li>
-            <li><span class="unit">Unidad 2: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/2_vectores.ipynb">Convertir todos los datos a numeros</a></li>
-            <li><span class="unit">Unidad 3: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/3_train_test.ipynb">Separar la tabla en dos: Entrenamiento y Prueba</a></li>
-            <li><span class="unit">Unidad 4: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
-            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb">Tipos de caja negra</a></li>
+            <li><span class="unit">Unidad 0: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono movil</a></li>
+            <li><span class="unit">Unidad 1: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/1_pandas.ipynb">Convertir mis datos en una tabla</a></li>
+            <li><span class="unit">Unidad 2: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/2_vectores.ipynb">Convertir todos los datos a numeros</a></li>
+            <li><span class="unit">Unidad 3: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/3_train_test.ipynb">Separar la tabla en dos: Entrenamiento y Prueba</a></li>
+            <li><span class="unit">Unidad 4: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
+            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb">Tipos de caja negra</a></li>
             <li>
-                <span class="unit">Unidad 6: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a>
+                <span class="unit">Unidad 6: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a>
                 <ul>
-                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6.1_ejercicio_diabetes_parte1.ipynb">Ejercicio de Clasificacion Parte 1</a></li>
+                    <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6.1_ejercicio_diabetes_parte1.ipynb">Ejercicio de Clasificacion Parte 1</a></li>
                 </ul>
             </li>
             <li>
-                <span class="unit">Unidad 7: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a>
+                <span class="unit">Unidad 7: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a>
                 <ul>
-                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7.1_ejercicio_diabetes_parte2.ipynb">Ejercicio de Clasificacion Parte 2</a></li>
+                    <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7.1_ejercicio_diabetes_parte2.ipynb">Ejercicio de Clasificacion Parte 2</a></li>
                 </ul>
             </li>
         </ul>
@@ -56,25 +56,25 @@
 
         <h3>Analisis y limpieza de datos (preprocesamiento):</h3>
         <ul>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A0_intro.ipynb">Intro al analisis y preprocesamiento de datos</a></li>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos_seaborn.ipynb">Graficos para analisis</a>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A0_intro.ipynb">Intro al analisis y preprocesamiento de datos</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos_seaborn.ipynb">Graficos para analisis</a>
               <ul>
-                  <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb">Graficos avanzados</a></li>
+                  <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb">Graficos avanzados</a></li>
               </ul>
           </li>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb">Jugando con Pandas (material opcional)</a></li>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb">Jugando con Numpy (material opcional)</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb">Jugando con Pandas (material opcional)</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb">Jugando con Numpy (material opcional)</a></li>
         </ul>
 
         <hr class="separator">
 
         <h3>Espiando adentro de las cajas negras (material opcional avanzado):</h3>
         <ul>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E1_knn.ipynb">Vecinos Cercanos (KNN)</a></li>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E2_arbol.ipynb">Arboles de Decision (Decision Trees)</a></li>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E3_regresion_lineal.ipynb">Regresion Lineal y Logistica (Lineal and Logistic Regression)</a></li>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E4_naive_bayes.ipynb">Naive Bayes</a></li>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E5_ensambles.ipynb">Ensambles (Ensembles)</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E1_knn.ipynb">Vecinos Cercanos (KNN)</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E2_arbol.ipynb">Arboles de Decision (Decision Trees)</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E3_regresion_lineal.ipynb">Regresion Lineal y Logistica (Lineal and Logistic Regression)</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E4_naive_bayes.ipynb">Naive Bayes</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E5_ensambles.ipynb">Ensambles (Ensembles)</a></li>
         </ul>
 
     </div>
