--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -34,19 +34,19 @@
 
         <h3>Contenido</h3>
         <ul>
-            <li><span class="unit">Unidad 1: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb">De imagenes a vectores</a></li>
-            <li><span class="unit">Unidad 2: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb">De texto a vectores</a></li>
-            <li><span class="unit">Unidad 3: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb">Cajas negras preentrenadas</a></li>
-            <li><span class="unit">Unidad 4: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/4_finetuning.ipynb">Finetuning</a></li>
-            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5_zero_shot_classification.ipynb">Zero Shot Classification</a>
-            <li><span class="unit">Unidad 6: </span><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/6_obtener_vectores.ipynb">Como obtener solo los vectores</a></li>
+            <li><span class="unit">Unidad 1: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb">De imagenes a vectores</a></li>
+            <li><span class="unit">Unidad 2: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb">De texto a vectores</a></li>
+            <li><span class="unit">Unidad 3: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb">Cajas negras preentrenadas</a></li>
+            <li><span class="unit">Unidad 4: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/4_finetuning.ipynb">Finetuning</a></li>
+            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5_zero_shot_classification.ipynb">Zero Shot Classification</a>
+            <li><span class="unit">Unidad 6: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/6_obtener_vectores.ipynb">Como obtener solo los vectores</a></li>
             <li><span class="unit">Unidad 7: </span>Un ejemplo de clasificacion de texto, desde BoW hasta un Ensemble de Transformers:
                 <ul>
-                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb">Baseline</a></li>
-                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb">Bag of Words</a></li>
-                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediciton_Zeroshot.ipynb">Transformers Zero Shot</a></li>
-                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb">Transformers Finetuning</a></li>
-                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb">Transformers Ensemble</a></li>
+                    <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb">Baseline</a></li>
+                    <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb">Bag of Words</a></li>
+                    <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediciton_Zeroshot.ipynb">Transformers Zero Shot</a></li>
+                    <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb">Transformers Finetuning</a></li>
+                    <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb">Transformers Ensemble</a></li>
                 </ul>
             </li>
         </ul>
@@ -55,33 +55,33 @@
 
         <h3>LLM APIs, Agentes y RAG</h3>
         <ul>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb">OpenAI Prompting</a></li>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Prompting.ipynb">LangChain Prompting</a></li>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Chains.ipynb">LangChain Chains</a></li>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Agents.ipynb">LangChain Agents</a></li>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_RAG.ipynb">LangChain RAG</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb">OpenAI Prompting</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Prompting.ipynb">LangChain Prompting</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Chains.ipynb">LangChain Chains</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Agents.ipynb">LangChain Agents</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_RAG.ipynb">LangChain RAG</a></li>
         </ul>
 
         <hr class="separator">
 
         <h3>Espiando dentro de las cajas negras de deep learning (material opcional avanzado):</h3>
         <ul>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb">Intro a redes neuronales</a></li>
-          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E1_grafos_backprop_autograd.ipynb">De redes neuronales a matrices y grafos</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb">Intro a redes neuronales</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E1_grafos_backprop_autograd.ipynb">De redes neuronales a matrices y grafos</a></li>
           <li>Arquitecturas:
               <ul>
                   
-                  <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E2_Convolutional_Arch.ipynb">Redes Convolucionales</a>
+                  <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E2_Convolutional_Arch.ipynb">Redes Convolucionales</a>
                       <ul>
-                          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb">CNN con Keras</a></li>
-                          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch.ipynb">CNN con Pytorch</a></li>
-                          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning1.ipynb">CNN Finetuning con Pytorch</a></li>
-                          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning2.ipynb">CNN Finetuning 2 con Pytorch</a></li>
+                          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb">CNN con Keras</a></li>
+                          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch.ipynb">CNN con Pytorch</a></li>
+                          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning1.ipynb">CNN Finetuning con Pytorch</a></li>
+                          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning2.ipynb">CNN Finetuning 2 con Pytorch</a></li>
                       </ul>
                   </li>
-                  <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E3_Autoencoders_Arch.ipynb">Autoencoders</a></li>
-                  <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E4_Diffusers_Arch.ipynb">Diffusers</a></li>
-                  <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb">Transformers</a></li>
+                  <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E3_Autoencoders_Arch.ipynb">Autoencoders</a></li>
+                  <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E4_Diffusers_Arch.ipynb">Diffusers</a></li>
+                  <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb">Transformers</a></li>
               </ul>
           </li>
         </ul>
